# flash-framework

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pymelos.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/example_one/: README.md  blog.db  main.py  models.py  permissions.py  pyproject.toml  seed_user.py  views.py
apps/example_one/src/example_one/: forms.py  main.py  views.py
apps/example_one/src/example_one/data/: articles.json
apps/example_one/src/example_one/templates/: about.html  dashboard.html
apps/example_one/src/example_one/templates/admin/: moderation.html  users.html
apps/example_one/src/example_one/templates/articles/: detail.html  list.html  write.html
apps/example_one/src/example_one/templates/auth/: login.html  register.html
apps/example_one/src/example_one/templates/forms/: showcase.html
apps/example_one/src/example_one/templates/layout/: navbar.html
apps/example_one/templates/: about.html  base.html  dashboard.html
apps/example_one/templates/admin/: dashboard.html
apps/example_one/templates/articles/: detail.html  list.html  write.html
apps/example_one/templates/auth/: login.html  logout.html  register.html
apps/example_one/templates/layout/: footer.html  navbar.html
docs/: getting-started.md  index.md
