[project]
name = "flash-framework"
version = "0.0.0"
description = "Python monorepo"
requires-python = ">=3.12"

[tool.uv]
workspace = { members = ["packages/*"] }


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*", "*/tests/*",]

[tool.ruff.lint]
select = ["F",      # Pyflakes
          "E",      # pycodestyle
          "I",      # isort
          "N",      # pep8-naming
          "FBT",    # flake8-boolean-trap
          "B",      # flake8-bugbear
          "A",      # flake8-builtins
          "C4",     # flake8-comprehensions
          "DTZ",    # flake8-datetimez
          "EM",     # flake8-errmsg
          "EXE",    # flake8-executable
          "ISC",    # flake8-implicit-str-concat
          "ICN",    # flake8-import-conventions
          "LOG",    # flake8-logging
          "G",      # flake8-logging-format
          "PIE",    # flake8-pie
          "PYI",    # flake8-pyi
          "Q",      # flake8-quotes
          "RSE",    # flake8-raise
          "RET",    # flake8-return
          "SLOT",   # flake8-slots
          "SIM",    # flake8-simplify
          "TID",    # flake8-tidy-imports
          "TCH",    # flake8-type-checking
          "ARG",    # flake8-unused-arguments
          "PD",     # pandas-vet
          "TRY",    # tryceratops
          "PERF",   # Perflint
          "RUF"]  
extend-select = ["I"]
fixable = ["ALL"]

[dependency-groups]
dev = [
    "pymelos>=0.1.4",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
